force-app/main/default/objects/pse__Billing_Event_Item__c/pse__Billing_Event_Item__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__BillingEventItemHelp</customHelpPage>
    <description>Contains simplified, potentially summarized information for a billable record and often correspond with invoice line items in your financial system. Every billing event item must have a lookup relationship to either a budget, timecard split, expense, milestone, or miscellaneous adjustment. Grouped together into billing events.</description>
    <label>Billing Event Item</label>
    <nameField>
        <displayFormat>BEI-{YYYYMMDD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Event Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>