force-app/main/default/objects/pse__Billing_Event_Item__c/fields/pse__Quantity__c.field-meta.xml
<CustomField>
    <fullName>pse__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>