force-app/main/default/objects/pse__Billing_Event_Item__c/fields/pse__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>pse__Subcategory__c</fullName>
    <label>Subcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>